tests/fixtures/invalid/pow_int_str_float.py
# Cannot call pow() with Int, Str, Float
x = pow(1, "hello", 1.0)
